# vimux.nvim

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile.am  README.md  client.c  cmd-list-keys.c  cmd-pipe-pane.c  cmd.c  configure.ac  control.c  file.c  job.c  proc.c  pyproject.toml  server.c  shell.nix  status.c  template.rockspec  tmux.c  tmux.h  vimux.c  vimux.h  window.c
.github/workflows/: main.yml
fuzz/: input-fuzzer.c
scripts/: install.sh
